--- a/vc7/VPR/VPR.vcproj
+++ b/vc7/VPR/VPR.vcproj
@@ -35,9 +35,9 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-gd-$(BOOST_VERSION).lib cppdom_d.lib libnspr4.lib libplc4.lib ws2_32.lib $(NOINHERIT)"
+				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-gd-$(BOOST_VERSION).lib cppdom_d.lib libnspr4.lib libplc4.lib ws2_32.lib rpcrt4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/vpr_d.dll"
-				Version="0.35.2"
+				Version="0.35.3"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;"
 				ModuleDefinitionFile=""
@@ -88,7 +88,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-$(BOOST_VERSION).lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib $(NOINHERIT)"
+				AdditionalDependencies="libboost_filesystem-$(BOOST_TOOL)-mt-$(BOOST_VERSION).lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib rpcrt4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/vpr.dll"
 				Version="0.35.2"
 				LinkIncremental="1"
@@ -236,12 +236,6 @@
 			</File>
 			<File
 				RelativePath="..\..\external\md5-c\md5c.c">
-			</File>
-			<File
-				RelativePath="..\..\external\leach-uuid\uuid\sysdep.c">
-			</File>
-			<File
-				RelativePath="..\..\external\leach-uuid\uuid\uuid.c">
 			</File>
 		</Filter>
 		<Filter
@@ -558,12 +552,6 @@
 			</File>
 			<File
 				RelativePath="..\..\external\md5-c\md5.h">
-			</File>
-			<File
-				RelativePath="..\..\external\leach-uuid\uuid\sysdep.h">
-			</File>
-			<File
-				RelativePath="..\..\external\leach-uuid\uuid\uuid.h">
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\vpr.h">
