--- a/modules/vrjuggler/vrj/Draw/OGL/Makefile.in
+++ b/modules/vrjuggler/vrj/Draw/OGL/Makefile.in
@@ -49,6 +49,7 @@ SUBOBJDIR=	$(GL_LIBRARY)
 
 SRCS=		GlBasicSimulator.cpp		\
 		GlDrawManager.cpp		\
+		GlDrawWandFunctors.cpp		\
 		GlPipe.cpp			\
 		GlSimInterfaceFactory.cpp	\
 		GlWindow.cpp
