--- a/vc7/VRJuggler/VRJuggler.vcproj
+++ b/vc7/VRJuggler/VRJuggler.vcproj
@@ -69,6 +69,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/Zm800"
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
